--- a/style.css
+++ b/style.css
@@ -193,57 +193,54 @@
     max-height: calc(90vh - 250px); /* establece una altura máxima */
     overflow-y: auto;
 }
-
-
-
 div.gallery {
-  border: 1px solid #ccc;
-}
-
-div.gallery:hover {
-  border: 1px solid #777;
-}
-
-div.gallery img {
-  width: 100%;
-  height: auto;
-}
-
-div.desc {
-  padding: 15px;
-  text-align: center;
-}
-
-* {
-  box-sizing: border-box;
-}
-
-.responsive {
-  padding: 0 6px;
-  float: left;
-  width: 24.99999%;
-}
-
-@media only screen and (max-width: 700px) {
-  .responsive {
-    width: 49.99999%;
-    margin: 6px 0;
+    border: 1px solid #ccc;
   }
-}
-
-@media only screen and (max-width: 500px) {
-  .responsive {
+  
+  div.gallery:hover {
+    border: 1px solid #777;
+  }
+  
+  div.gallery img {
     width: 100%;
+    height: auto;
   }
-}
+  
+  div.desc {
+    padding: 15px;
+    text-align: center;
+  }
+  
+  * {
+    box-sizing: border-box;
+  }
+  
+  .responsive {
+    padding: 0 6px;
+    float: left;
+    width: 24.99999%;
+  }
+  
+  @media only screen and (max-width: 700px) {
+    .responsive {
+      width: 49.99999%;
+      margin: 6px 0;
+    }
+  }
+  
+  @media only screen and (max-width: 500px) {
+    .responsive {
+      width: 100%;
+    }
+  }
+  
+  .clearfix:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
 
-.clearfix:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-#myImg {
+  #myImg {
     border-radius: 5px;
     cursor: pointer;
     transition: 0.3s;
@@ -271,11 +268,11 @@ div.desc {
     margin: auto;
     display: block;
     width: 80%;
-    max-width: 700px;}
-
-    
-/* Caption of Modal Image */
-#caption {
+    max-width: 700px;
+  }
+  
+  /* Caption of Modal Image */
+  #caption {
     margin: auto;
     display: block;
     width: 80%;
@@ -285,10 +282,3 @@ div.desc {
     padding: 10px 0;
     height: 150px;
   }
-  
-  /* Add Animation */
-  .modal-content, #caption {  
-    -webkit-animation-name: zoom;
-    -webkit-animation-duration: 0.6s;
-    animation-name: zoom;
-    animation-duration: 0.6s;}
