--- a/style.css
+++ b/style.css
@@ -193,7 +193,7 @@
     max-height: calc(90vh - 250px); /* establece una altura máxima */
     overflow-y: auto;
 }
-div.gallery {
+/* div.gallery {
     border: 1px solid #ccc;
   }
   
@@ -204,7 +204,7 @@ div.gallery {
   div.gallery img {
     width: 100%;
     height: auto;
-  }
+  } */
   
   div.desc {
     padding: 15px;
@@ -247,8 +247,7 @@ div.gallery {
   }
   
   #myImg:hover {opacity: 0.7;}
-  
-  /* The Modal (background) */
+
   .modal {
     display: none; /* Hidden by default */
     position: fixed; /* Stay in place */
@@ -263,7 +262,7 @@ div.gallery {
     background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
   }
   
-  /* Modal Content (image) */
+
   .modal-content {
     margin: auto;
     display: block;
@@ -271,8 +270,7 @@ div.gallery {
     max-width: 700px;
   }
   
-  /* Caption of Modal Image */
-  #caption {
+  /* #caption {
     margin: auto;
     display: block;
     width: 80%;
@@ -281,4 +279,80 @@ div.gallery {
     color: #ccc;
     padding: 10px 0;
     height: 150px;
-  }
+  } */
+
+body{background-color:#ccc;}
+
+h1{
+    text-align: center;
+    position: relative;
+    width: 80%;
+    margin: 50px auto;
+}
+h1::before{content: "";
+    display: block;
+    width: 100%;
+    height: 2px;
+    position: absolute;
+    background-color: black;
+    top: 50%;
+    z-index: -1;
+}
+h1 span{
+    background-color:#ccc;
+    padding: 0 15px;
+}
+
+.img-gallery{
+    width: 80%;
+    margin: 50px auto 50px;
+    display: grid;
+    grid-template-columns: repeat(auto-fit,minmax(240px,1fr));
+    gap: 30px;
+}
+.img-gallery img{
+    width: 100%;
+    cursor:pointer;
+    transition: 1s;
+}
+.img-gallery img:hover{
+    transform: scale(1.2);
+
+}
+.ful-img{
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(0,0,0,0.9);
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: none;
+    align-items: center;
+    justify-content: center;
+}
+.ful-img span{
+    position: absolute;
+    top:5%;
+    right: 5%;
+    font-size: 30px;
+    color: #fff;
+    cursor: pointer;
+}
+
+.ful-img img{
+    width: 90%;
+    max-width: 600px;
+}
+
+@media screen and(max-widht:400px) {
+    h1{
+        text-decoration: underline;
+    }
+    h1::before{
+        display: none;
+    }
+    h1 span{
+        padding: o;
+    }
+}
+    
