--- a/style.css
+++ b/style.css
@@ -227,6 +227,7 @@ h1 span{
 }
 .img-gallery img{
     width: 100%;
+    height: 80%;
     cursor:pointer;
     transition: 1s;
 }
@@ -235,16 +236,24 @@ h1 span{
 
 }
 .ful-img{
-    width: 100%;
     height: 100vh;
     background-color: rgba(0,0,0,0.9);
-    position: fixed;
     top: 0;
     left: 0;
     display: none;
     align-items: center;
     justify-content: center;
     z-index: 99;
+    position:fixed;
+    margin: auto;
+    padding: 0;
+    border: 1px solid #888;
+    width: 100%;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+    -webkit-animation-name: animatetop;
+    -webkit-animation-duration: 0.4s;
+    animation-name: animatetop;
+    animation-duration: 0.4s
 }
 .ful-img span{
     position: absolute;
@@ -271,4 +280,60 @@ h1 span{
         padding: o;
     }
 }
+
+  /* Modal Content */
+  .modal-content {
+    position: relative;
+    background-color: #fefefe;
+    margin: auto;
+    padding: 0;
+    border: 1px solid #888;
+    width: 80%;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+    -webkit-animation-name: animatetop;
+    -webkit-animation-duration: 0.4s;
+    animation-name: animatetop;
+    animation-duration: 0.4s
+  }
+  
+  /* Add Animation */
+  @-webkit-keyframes animatetop {
+    from {top:-300px; opacity:0} 
+    to {top:0; opacity:1}
+  }
+  
+  @keyframes animatetop {
+    from {top:-300px; opacity:0}
+    to {top:0; opacity:1}
+  }
+  
+  /* The Close Button */
+  .close {
+    color: white;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+  }
+  
+  .modal-header {
+    padding: 2px 16px;
+    background-color: #88a4c4 ;
+    color: white;
+  }
+  
+  .modal-body {padding: 2px 16px;}
+  
+  .modal-footer {
+    padding: 2px 16px;
+    background-color: #88a4c4 ;
+    color: white;
+  }
+  
     
