--- a/style.css
+++ b/style.css
@@ -336,4 +336,10 @@ h1 span{
     color: white;
   }
   
-    
+  .modal-body img{
+    width: 50%;
+    height: 80%;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+  }
