--- a/css/style.css
+++ b/css/style.css
@@ -209,7 +209,7 @@ h1::before{content: "";
     width: 100%;
     height: 2px;
     position: absolute;
-    background-color: black;
+
     top: 50%;
     z-index: -1;
 }
@@ -260,7 +260,7 @@ h1 span{
     max-width: 600px;
 }
 
-@media screen and(max-widht:400px) {
+@media screen and(max-width:400px) {
     h1{
         text-decoration: underline;
     }
@@ -268,7 +268,65 @@ h1 span{
         display: none;
     }
     h1 span{
-        padding: o;
+        padding: 1px;
     }
 }
-    
+.code-container {
+    margin: 40px auto; /* ajusta el margen superior e inferior */
+    max-height: calc(90vh - 250px); /* establece una altura máxima */
+    overflow-y: auto;
+}
+
+.nosotros {
+    margin: auto auto;
+}
+
+#tituloNosotros {
+    text-align: center;
+    padding-bottom: 10px;
+}
+
+#card1, #card2, #card3, #card4, #card5 {
+    display: inline-block;
+    width: 18%;
+    margin-right: 1%;
+    vertical-align: top;
+    text-align: center;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    padding: 10px;
+    box-sizing: border-box;
+  }
+
+  .card:last-child {
+    margin-right: 0;
+  }
+
+  .card h3 {
+    font-size: 1.2em;
+    margin-bottom: 10px;
+  }
+
+  .card p {
+    font-size: 0.9em;
+    margin-bottom: 10px;
+  }
+
+  .card-img-top {
+    width: 10%;
+  }
+
+  #tituloNosotros {
+    text-align: center;
+    padding-bottom: 10px;
+}
+
+#Perritos-necesitados {
+    width: 90%;
+    height: 90%;
+
+}
+
+#tituloEquipo {
+    text-align: center;
+}
